Support for searching and filtering in the API. Update controllers to them
